--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-#index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RSSchool CV</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body cz-shortcut-listen="true">
+        <nav>
+            <ul class="navLinks">
+                <a class="navLinksItem" href="#contacts">Contacts</a>
+                <a class="navLinksItem" href="#skills">Skills</a></li>
+                <a class="navLinksItem" href="#languages">Languages</a>
+                <a class="navLinksItem" href="#aboutMe">About Myself</a>
+                <a class="navLinksItem" href="#education">Education</a>
+                <a class="navLinksItem" href="#courses">Courses</a>
+                <a class="navLinksItem" href="#codeExample">Code Example</a>
+            </ul>
+        </nav>
+    <div class="centerContainer">
+        <div class="allColumns">
+            <div class="leftColumns">
+                <header>
+                    <img class="avatar" src="./images/20210322_192743 — копия.jpg" alt="Portrait" widht="75" height="300">
+                    <h1 class="mainName">Oksana Kokhanova</h1>
+                    <h2 class="profession">Junior Frontend Developer</h2>
+                </header>
+                <main>
+                    <section id="contacts" class="contacts">
+                        <h3>Contacts</h3>
+                        <ul>
+                            <li>Phone: <b>+7 (985) 968-58-90</b></li>
+                            <li>E-mail: <b>konevao@list.ru</b></li>
+                            <li>Telegram: <b>@Occhi_grigi</b></li>
+                        </ul>
+                    </section>
+                    <section id="skills" class="skills">
+                        <h3>Skills</h3>
+                        <ul>
+                            <ol>HTML5</ol>
+                            <ol>CSS4</ol>
+                            <ol>JavaScript Basics</ol>
+                            <ol>Git, GitHub</ol>
+                            <ol>VS Code</ol>
+                            <ol>Figma</ol>
+                        </ul>
+                    </section>
+                    <section id="languages" class="languages">
+                        <h3>Languages</h3>
+                        <ul>
+                            <ol><b>Russian:</b> Native</ol>
+                            <ol><b>English:</b> Intermediate</ol>
+                        </ul>
+                    </section>
+                </main>
+            </div>
+            <aside class="rightColumn">
+                <section id="aboutMe" class="aboutMe">
+                    <div class="subHeader">
+                        <h3>About Myself</h3>
+                    </div>
+                    <p>I have 7 years of experience working in a bank. I have worked with ordinary clients, VIP clients and small business companies, so I have well-developed soft skills.</p>
+                    <p>3 years ago, I went on maternity leave and started working freelance. Most of all I liked to make up sites on Tilda.</p>
+                    <p>So at the beginning of this year I realized that I wanted to be able to do something more than just collect sites on Tilda. Now I have been studying JavaScript for 4 months and plan to become a master of my craft.</p>
+                </section>
+                <section id="education" class="education">
+                    <div class="subHeader">
+                        <h3>Education</h3>
+                    </div>
+                    <div><p><strong>Commercial Banking College №6</strong></p>
+                    <p>Faculty: Banking</p>
+                    <p>Years: 2008-2012</p>
+                    </div>
+                    <div><p><strong>Plekhanov Russian University of Economics</strong></p>
+                    <p>Faculty: Accounting, analysis and audit</p>
+                    <p>Years: 2012-2016</p>
+                    </div>
+                    <div><p><strong>Plekhanov Russian University of Economics</strong></p>
+                    <p>Faculty:Financial analytics</p>
+                    <p>Years: 2016-2019</p>
+                    </div>
+                </section>
+                <section id="courses" class="courses">
+                    <div class="subHeader">
+                        <h3>Courses</h3>
+                    </div>
+                    <p>HTML Academy (html, css)</p>
+                </section>
+                <section id="codeExample" class="codeExample">
+                    <div class="subHeader">
+                        <h3>Code Example</h3>
+                    </div>
+                    <p><strong>Task</strong>
+                    "Coding in function trueOrFalse, function accept 1 parameters:val, try to use the conditional statement if...else, if val value is false (val==false or it can convert to false), should return a string "false", if not, return a string "true"."</p>
+                    <pre>
+                        <code>
+                            " function trueOrFalse(val){
+                                if (val) return 'true'; 
+                                else return 'false';
+                            } "
+                        </code>
+                    </pre>
+                </section>
+            </aside>
+        </div>
+        <footer>
+            <a class="myGithub" href="https://github.com/kokhanova">
+                <p>Visit my GitHub</p>
+            </a>
+            <p>2022</p>
+            <a href="https://rs.school/js/">
+                <img src="./icons/rs_school.svg" alt="Rsschool Icon" width="73" height="26">
+            </a>
+        </footer>
+    </div>
+    
+</body>
+</html>
